name:                Resample
version:             0.1.0.0
synopsis:            Utility to resample video by nearest-neighbor interpolation
-- description:
homepage:            http://github.com/CBMM/videoutils
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable resamplevideo
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , directory
                     , filepath
                     , foldl
                     , errors
                     , system-filepath
                     , text
                     , time
                     , turtle

  -- hs-source-dirs:
  default-language:    Haskell2010
