name:                Resample
version:             0.1.0.0
synopsis:            Utility to resample video by nearest-neighbor interpolation
-- description:
homepage:            http://github.com/CBMM/videoutils
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable resamplevideo
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5.6 && < 0.6
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , foldl >= 1.1.6 && < 1.7
                     , errors >= 2.1.2 && < 2.3
                     , system-filepath >= 0.4.13 && < 0.5
                     , text >= 1.2.1 && < 1.3
                     , time >= 1.5 && < 1.6
                     , turtle >= 1.2.5 && < 1.3

  -- hs-source-dirs:
  default-language:    Haskell2010
